targets/srv0/k3s/qbittorrent/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-qbittorrent-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: radarr
        - podSelector:
            matchLabels:
              app: sonarr
        - podSelector:
            matchLabels:
              app: prowlarr
      ports:
        - port: 8080
  policyTypes:
    - Ingress
